Arreglar la capa de validación de DTOs y cubrirla con tests
Los validadores tenían varios fallos que dejaban pasar datos inválidos hasta
la base de datos (500 opaco en vez de 400 con el campo señalado) o que
bloqueaban operaciones legítimas. No había ningún test sobre esta capa.

Bugs corregidos:

- ExecutionPackageValidator validaba los hijos dos veces al actualizar, y una
  de ellas forzando modo update: añadir una vía o estación nuevas dentro de un
  update era imposible porque se les exigía un id que aún no tienen. Ahora cada
  hijo se valida una sola vez y según su propio estado (sin id -> alta).

- GenericValidator declaraba un campo `alerts` que nunca se inicializaba: todos
  sus helpers añadían las alertas a una lista temporal que se descartaba, y
  processIndexErrors lanzaba NPE. Se elimina el estado y los helpers duplicados;
  ValidatorUtils queda como única caja de herramientas.

- Los validadores eran @RequestScope, así que fallaban con "No thread-bound
  request found" al llamarlos desde los métodos @Async de BaseAsyncService.
  Ahora son singletons stateless.

- CantileverValidator aceptaba precisión (10,3) para seis columnas que son
  NUMERIC(4,3), NUMERIC(3,0) y NUMERIC(5,3), y no comprobaba el rango [-90, 90]
  de armAngle ni el mínimo de cwHeight.

- ProfileDTO.kp viaja como texto pero la columna es NUMERIC(12,3) y
  @PositiveOrZero: solo se validaba su longitud, así que un valor no numérico
  reventaba al mapear. Se valida formato y precisión.

- El alta en lote de perfiles no detectaba profileId repetidos (solo lo hacía
  la actualización). Además ahora se señalan todas las posiciones implicadas en
  cada repetición, no solo la segunda.

- CantileverValidator exigía que la ménsula ya existiese (validateRequiredDTO
  comprueba el id), impidiendo crear una cantilever con una ménsula nueva pese
  a que la relación cascadea.

- SteadyArmValidator permitía longitudes hasta 999999 cuando la entidad declara
  @Max(2000).

Además:

- Las claves ajenas al