@@ -3,31 +3,32 @@ package com.alejandro.mtoconfiguration.validator.infrastructure;
 import com.alejandro.mtoconfiguration.model.commons.Alert;
 import com.alejandro.mtoconfiguration.model.synchronous.infrastructure.BusinessEntityDTO;
 import com.alejandro.mtoconfiguration.validator.commons.CRUDValidator;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
-import org.springframework.web.context.annotation.RequestScope;
 
 import java.util.Collections;
 import java.util.List;
 
+/**
+ * La entidad de negocio llega desde el maestro externo, no se da de alta desde este servicio: no
+ * hay reglas propias que comprobar.
+ */
 @Component
-@RequestScope
-@Slf4j
 public class BusinessEntityValidator extends CRUDValidator<BusinessEntityDTO> {
 
-    @Override
-    public List<Alert> validateBeforeDelete(BusinessEntityDTO dto) {
-        getAlerts().clear();
-        return Collections.emptyList();
-    }
+    private static final String ENTITY_NAME = "businessEntity";
 
     @Override
-    protected void loadRequireFields() {
-        super.getRequiredFields();
+    protected String getEntityName() {
+        return ENTITY_NAME;
     }
 
     @Override
     public List<Alert> validateBeforeSave(BusinessEntityDTO dto) {
-        return List.of();
+        return Collections.emptyList();
+    }
+
+    @Override
+    public List<Alert> validateBeforeDelete(BusinessEntityDTO dto) {
+        return Collections.emptyList();
     }
 }
